RESOLVED FIXED287309
REGRESSION(288737@main): YouTube embed stays fully sized when exiting fullscreen from system control
https://bugs.webkit.org/show_bug.cgi?id=287309
Summary REGRESSION(288737@main): YouTube embed stays fully sized when exiting fullscr...
Tim Nguyen (:ntim)
Reported 2025-02-07 17:25:45 PST
Attachments
Tim Nguyen (:ntim)
Comment 1 2025-02-07 17:30:54 PST
EWS
Comment 2 2025-02-10 12:15:49 PST
Committed 290177@main (daad2275a5d5): <https://commits.webkit.org/290177@main> Reviewed commits have been landed. Closing PR #40262 and removing active labels.
EWS
Comment 3 2025-02-12 12:35:20 PST
Committed 289651.98@safari-7621-branch (bdbc0c57c5f0): <https://commits.webkit.org/289651.98@safari-7621-branch> Reviewed commits have been landed. Closing PR #2565 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.