REGRESSION(288737@main): YouTube embed stays fully sized when exiting fullscreen from system control https://bugs.webkit.org/show_bug.cgi?id=287309 rdar://144420790

Reviewed by Darin Adler.

290048@main identified the correct issue with the code, but didn't call updatePageFullscreenStatusIfTopDocument() from the correct documents.

Add WebKitTestRunner helper to emulate exiting fullscreen from the UI Process to test this.

* LayoutTests/fullscreen/iframe-fullscreen-system-exit-expected.txt: Added.
* LayoutTests/fullscreen/iframe-fullscreen-system-exit.html: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/dom/FullscreenManager.cpp:
(WebCore::clearFullscreenFlags):
(WebCore::FullscreenManager::exitFullscreen):
(WebCore::FullscreenManager::finishExitFullscreen):
(WebCore::FullscreenManager::willEnterFullscreen):
* Source/WebCore/dom/FullscreenManager.h:
* Source/WebKit/UIProcess/API/C/WKPage.cpp:
(WKPageRequestExitFullScreen):
* Source/WebKit/UIProcess/API/C/WKPage.h:
* Tools/WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::requestExitFullscreenFromUIProcess):
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.h:
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::requestExitFullscreenFromUIProcess):
* Tools/WebKitTestRunner/TestController.h:
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle):

Canonical link: https://commits.webkit.org/290177@main